<?xml version="1.0"?>
<package>
  <name>tl740d_driver</name>
  <version>1.1.0</version>
  <description>ROS package for TL740D IMU</description>

  <author email="nipengcheng123456@163.com">Pengcheng Ni</author>
  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <url type="website">https://github.com/I-Quotient-Robotics/tl740d_driver</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/tl740d_driver</url>
  <url type="bugtracker">https://github.com/I-Quotient-Robotics/tl740d_driver/issues</url>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <build_depend>gps_common</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>gps_common</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
